--- a/src/prototype/Cargo.toml
+++ b/src/prototype/Cargo.toml
@@ -8,6 +8,7 @@ piston = "0.34.0"
 piston2d-graphics = "0.22.0"
 pistoncore-glutin_window = "0.40.0"
 piston2d-opengl_graphics = "0.47.0"
+time = "*"
 
 [lib]
 name = "prototype"
